Fix for fields to updated as expected and get rid of the annoying jumping

--- a/frameworks/foundation/english.lproj/text_field.css
+++ b/frameworks/foundation/english.lproj/text_field.css
@@ -1,25 +1,30 @@
 /* Common SC.TextFieldView styles - needed to work properly */
 
-.sc-text-field-view{
+.sc-view .sc-text-field-view{
 	z-index: 10000;
+	overflow: visible;
 }
 
 .sc-text-field-view input {
 	position:  absolute;
+	top: -2px;
+	left: -2px;
 	width: 100%;
 	height: 100%;
   padding: 0px;
-  margin: 0px;
 	font-size: 12px;
 }
 
 .sc-text-field-view textarea {
 	position:  absolute;
-	width: 100%;
+	top: -2px;
+	left: -2px;
+  width: 100%;
 	height: 100%;
   padding: 0px;
-  margin: 0px;
-	font-size: 12px;
+  font-size: 12px;
+  overflow: auto;
+  font-family: "Lucida Grande","Lucida Sans",Verdana,Arial,sans-serif;
 }
 
 .sc-text-field-view .sc-hint {
